# ccmanger

./: .env.development  .env.production  .gitignore  CHANGELOG.md  CLAUDE.md  INSTALL.md  README.md  ecosystem.config.js  eslint.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  vite.config.ts
docs/: 01-architecture-overview.md  02-api-specification.md  03-database-schema.md  04-backend-implementation.md  05-testing-strategy.md  06-ci-cd-pipeline.md  07-implementation-phases.md  08-frontend-integration.md  09-rust-tauri-migration.md  README.md  configuration.md  troubleshooting.md  user-guide.md
e2e/: accessibility.spec.ts  agent-lifecycle.spec.ts  drag-drop.spec.ts  workspace.spec.ts  worktree.spec.ts
scripts/: build.sh  install.sh  setup-logrotate.sh  start-dev.sh  start-prod.sh
server/: eslint.config.js  package.json  tsconfig.json  vitest.config.ts
server/src/: app.ts  (+1 more)
shared/: package.json  tsconfig.tsbuildinfo
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: agent_benchmarks.rs
src-tauri/capabilities/: default.json
src-tauri/examples/: pty_test.rs
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: agent_commands.rs  mod.rs  usage_commands.rs  workspace_commands.rs  worktree_commands.rs
src-tauri/src/db/: connection.rs  migration_tool.rs  migrations.rs  mod.rs
src-tauri/src/db/migrations/: 001_initial_schema.sql  002_rename_finished_to_idle.sql
src-tauri/src/db/repositories/: agent_repository.rs  message_repository.rs  mod.rs  usage_repository.rs  workspace_repository.rs  worktree_repository.rs
src-tauri/src/services/: agent_service.rs  claude_api_service.rs  git_service.rs  mod.rs  process_service.rs  usage_service.rs  websocket_server.rs  workspace_service.rs  worktree_service.rs
src-tauri/src/types/: agent.rs  hook.rs  message.rs  mod.rs  usage.rs  websocket.rs  workspace.rs  worktree.rs
src-tauri/tests/: integration_tests.rs
src-tauri/tests/api/: agent_commands_test.rs  mod.rs  workspace_commands_test.rs  worktree_commands_test.rs
src-tauri/tests/common/: fixtures.rs  mocks.rs  mod.rs
src-tauri/tests/database/: migrations_test.rs  mod.rs
(+105 files in other folders)
