[package]
name = "claude-manager"
version = "1.0.0"
description = "A GUI application for managing Claude Code CLI agents across git worktrees"
authors = ["Claude Manager Team"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "claude_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Web Framework (for WebSocket + optional HTTP API)
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Git Operations
git2 = "0.19"

# Process Management
portable-pty = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
parking_lot = "0.12"
futures = "0.3"
async-trait = "0.1"
dirs = "5"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Unix-specific for signal handling
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Desktop-specific plugins
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
serial_test = "3"
mockall = "0.12"
fake = { version = "2", features = ["derive", "chrono"] }
rstest = "0.18"
assert_matches = "1.5"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "agent_benchmarks"
harness = false

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
